--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "mongodb": "^3.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
