--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "mongodb": "^3.6.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
